Partially implement the server functionality with react and local storage

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -17,3 +17,12 @@ body {
 
   touch-action: manipulation;
 }
+
+td, th {
+  border: 1px solid gray;
+  padding: 3px;
+}
+
+th {
+  font-weight: bold;
+}
