Implement login / logout

--- a/server-code/views/index.ejs
+++ b/server-code/views/index.ejs
@@ -17,11 +17,9 @@
 </head>
 
 <body>
-  <div id="app">
-    <%- componentHTML %>
-  </div>
+  <div id="app"><%- componentHTML %></div>
 
-  <script src="scripts/app.js"></script>
+  <script src="/scripts/app.js"></script>
 </body>
 
 </html>
