--- a/server-code/views/index.ejs
+++ b/server-code/views/index.ejs
@@ -20,6 +20,13 @@
   <div id="app"><%- componentHTML %></div>
 
   <script src="/scripts/app.js"></script>
+
+  <% if (process.env.NODE_ENV !== 'production') { %>
+    <script>
+      document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
+      ':35729/livereload.js?snipver=1"></' + 'script>')
+    </script>
+  <% } %>
 </body>
 
 </html>
