Start styling the app with Bootstrap

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,1 +1,8 @@
-@import "base.scss";
+@import "bootstrap-custom";
+
+@import "base";
+
+@import "components/app";
+@import "components/authed-menu";
+@import "components/stats";
+@import "components/stats-item";
