Style flashcard list

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,8 +1,10 @@
 @import "bootstrap-custom";
 
+@import "constants";
 @import "base";
 
 @import "components/app";
 @import "components/authed-menu";
+@import "components/flashcard-list";
 @import "components/stats";
 @import "components/stats-item";
