Move bootstrap classes from markup to css

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -6,5 +6,6 @@
 @import "components/app";
 @import "components/authed-menu";
 @import "components/flashcard-list";
+@import "components/paginator";
 @import "components/stats";
 @import "components/stats-item";
