--- a/assets/styles/_constants.scss
+++ b/assets/styles/_constants.scss
@@ -2,5 +2,6 @@ $margin-standard: 20px;
 
 $universal-green: #468847;
 $background-green: #dff0d8;
+$gray-lighter: #f5f5f5;
 
 $breakpoint700: 768px;
