--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -2,10 +2,12 @@
 
 @import "constants";
 @import "base";
+@import "elements";
 
 @import "components/app";
 @import "components/authed-menu";
 @import "components/flashcard-list";
 @import "components/paginator";
+@import "components/repetitions";
 @import "components/stats";
 @import "components/stats-item";
