Display an alert when syncing fails because of a server error

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -6,6 +6,7 @@
 
 @import "components/app";
 @import "components/authed-menu";
+@import "components/authed-root";
 @import "components/flashcard-list";
 @import "components/paginator";
 @import "components/repetitions";
