Trade CSS debuggability for loading speed

--- a/server-code/views/index.ejs
+++ b/server-code/views/index.ejs
@@ -8,7 +8,9 @@
   <link rel="shortcut icon"
       href="/images/favicon.ico">
 
-  <link rel="stylesheet" href="/styles/main.css" />
+  <style>
+    <%- css %>
+  </style>
 
   <script>
     window.__SERIALIZED_INITIAL_STATE__ = '<%- serializedInitialState %>';
