Add google site verification meta

--- a/server-code/views/index.ejs
+++ b/server-code/views/index.ejs
@@ -8,6 +8,11 @@
   <link rel="shortcut icon"
       href="/images/favicon.ico">
 
+  <meta
+      name="google-site-verification"
+      content="<%= process.env.GOOGLE_SITE_VERIFICATION %>"
+  />
+
   <style>
     <%- css %>
   </style>
