--- a/assets/styles/_constants.scss
+++ b/assets/styles/_constants.scss
@@ -4,4 +4,7 @@ $universal-green: #468847;
 $background-green: #dff0d8;
 $gray-lighter: #f5f5f5;
 
+// This color is taken from bootstrap.
+$button-blue: #428bca;
+
 $breakpoint700: 768px;
