--- a/assets/styles/components/_authed-root.scss
+++ b/assets/styles/components/_authed-root.scss
@@ -1,3 +1,21 @@
+.authed-root__container--loaded {
+  @extend .container;
+}
+
+.authed-root__container--pending {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  color: $button-blue;
+}
+
 .authed-root__alert {
   @extend .alert;
   @extend .alert-danger;
