Replace a dedicated clearfix element with an @extend

--- a/assets/styles/components/_repetitions.scss
+++ b/assets/styles/components/_repetitions.scss
@@ -17,6 +17,8 @@
   background-color: $gray-lighter;
   border-bottom: 20px solid white;
   position: relative;
+
+  @extend .clearfix;
 }
 
 %repetitions__response {
