Style logged-in menu

--- a/assets/styles/_constants.scss
+++ b/assets/styles/_constants.scss
@@ -1,10 +1,15 @@
 $margin-standard: 20px;
 
 $universal-green: #468847;
+$universal-green-shadow: #f0fff1;
 $background-green: #dff0d8;
 $gray-lighter: #f5f5f5;
 
-// This color is taken from bootstrap.
+// These colors are taken from bootstrap.
 $button-blue: #428bca;
+$active-text-gray: #555555;
+$active-background-gray: #e7e7e7;
+$muted-gray: #999999;
+$light-gray: #cccccc;
 
 $breakpoint700: 768px;
