Implement unauthed menu

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -12,3 +12,5 @@
 @import "components/repetitions";
 @import "components/stats";
 @import "components/stats-item";
+@import "components/unauthed-menu";
+@import "components/unauthed-root";
