Fully design the logged-in menu

--- a/assets/styles/_constants.scss
+++ b/assets/styles/_constants.scss
@@ -4,6 +4,7 @@ $universal-green: #468847;
 $universal-green-shadow: #f0fff1;
 $background-green: #dff0d8;
 $gray-lighter: #f5f5f5;
+$universal-blue: #428bca;
 
 // These colors are taken from bootstrap.
 $button-blue: #428bca;
