Make an interim commit

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,6 +8,7 @@
 @import "components/authed-menu";
 @import "components/authed-root";
 @import "components/flashcard-list";
+@import "components/menu-notification";
 @import "components/paginator";
 @import "components/repetitions";
 @import "components/stats";
