--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -13,5 +13,6 @@
 @import "components/repetitions";
 @import "components/stats";
 @import "components/stats-item";
+@import "components/tooltip";
 @import "components/unauthed-menu";
 @import "components/unauthed-root";
