--- a/server-code/views/index.ejs
+++ b/server-code/views/index.ejs
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <div id="app"><%- componentHTML %></div>
+  <div id="app" style="height: 100%;"><%- componentHTML %></div>
 
   <script src="/scripts/app.js"></script>
 
