--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -7,6 +7,9 @@
 @import "components/app";
 @import "components/authed-menu";
 @import "components/authed-root";
+@import "components/create-flashcard";
+@import "components/edit-flashcard";
+@import "components/flashcard-inputs";
 @import "components/flashcard-list";
 @import "components/menu-notification";
 @import "components/paginator";
