--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -11,6 +11,7 @@
 @import "components/edit-flashcard";
 @import "components/flashcard-inputs";
 @import "components/flashcard-list";
+@import "components/home";
 @import "components/menu-notification";
 @import "components/paginator";
 @import "components/repetitions";
