Style signup page

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -15,6 +15,7 @@
 @import "components/menu-notification";
 @import "components/paginator";
 @import "components/repetitions";
+@import "components/signup";
 @import "components/stats";
 @import "components/stats-item";
 @import "components/tooltip";
