Implement basic About page structure

--- a/assets/styles/components/_app.scss
+++ b/assets/styles/components/_app.scss
@@ -6,6 +6,10 @@
   justify-content: space-between;
 }
 
+.app__content {
+  @extend .container;
+}
+
 .app__footer {
   @extend .clearfix;
   position: relative;
