Add about texts

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -4,6 +4,7 @@
 @import "base";
 @import "elements";
 
+@import "components/about";
 @import "components/about-wrapper";
 @import "components/app";
 @import "components/authed-menu";
