Add an about link to unauthed menu

--- a/assets/styles/_elements.scss
+++ b/assets/styles/_elements.scss
@@ -40,3 +40,8 @@
 @mixin heading {
   margin-top: 40px;
 }
+
+@mixin active-menu-item {
+  color: $active-text-gray !important;
+  background-color: $active-background-gray !important;
+}
