Implement intro page

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -13,6 +13,7 @@
 @import "components/edit-flashcard";
 @import "components/flashcard-inputs";
 @import "components/flashcard-list";
+@import "components/intro";
 @import "components/home";
 @import "components/menu-notification";
 @import "components/paginator";
