--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -18,6 +18,7 @@
 @import "components/menu-notification";
 @import "components/paginator";
 @import "components/repetitions";
+@import "components/settings";
 @import "components/signup";
 @import "components/stats";
 @import "components/stats-item";
