Style not found text

--- a/assets/styles/_constants.scss
+++ b/assets/styles/_constants.scss
@@ -5,6 +5,7 @@ $text-reduced-size: 0.85em;
 $universal-green: #468847;
 $universal-green-shadow: #f0fff1;
 $background-green: #dff0d8;
+$gray-text: #777;
 $gray-light: #e5e5e5;
 $gray-lighter: #f5f5f5;
 $universal-blue: #428bca;
