--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -16,6 +16,7 @@
 @import "components/intro";
 @import "components/home";
 @import "components/menu-notification";
+@import "components/not-found";
 @import "components/paginator";
 @import "components/repetitions";
 @import "components/settings";
